# python-excel

./: LICENSE  README.md  agenda.ipynb  aula01.ipynb  aula01_intro_python.ipynb  aula02_intro_pandas.ipynb  pyproject.toml
dados/: datatran2025.csv
